# QtSim

./: .gitignore  CMakeLists.txt  README.md  _deploy_windows.bat  _open_vs2022.bat  main.cpp  new_sim.py  qtsim.cpp  qtsim.h  resources.qrc
.github/workflows/: c-cpp.yml
dependencies/: CMakeLists.txt  build_deps.py
dependencies/QNanoPainter/: CMakeLists.txt
scripts/: _deploy_windows.bat  _open_vs2022.bat  _update_vs2022.bat  new_sim.py  rename_sim.py
shaders/: particle.frag  particle.vert  superfluid.frag  superfluid.vert
simulations_inactive/: BigBang.cpp  EarthMoon.cpp  Particles.cpp  SpaceEngine.cpp  SpaceEngine.h  TriCoord.cpp  TriCoord.h
src/: AttributeItem.cpp  AttributeItem.h  AttributeList.cpp  AttributeList.h  Bitmap.cpp  CacheContext.h  Canvas2D.cpp  Canvas2D.h  DrawingContext.cpp  DrawingContext.h  FFmpegWorker.cpp  FFmpegWorker.h  Options.cpp  Options.h  Options.ui  Project.cpp  Project.h  QtSim.cpp  QtSim.h  Simulation.cpp  Simulation.h  World.cpp  World.h  glwrappers.h  graphics.cpp  graphics.h  helpers.cpp  helpers.h  main.cpp  qtsim.cpp  qtsim.h  simulations.txt  toolbar.cpp  toolbar.h  toolbar.ui  types.h
src/core/: camera.cpp  camera.h  helpers.cpp  helpers.h  project.cpp  project.h  types.h
src/graphics/: ffmpeg_worker.cpp  ffmpeg_worker.h  glwrappers.cpp  graphics.cpp  graphics.h  paint_context.cpp  paint_context.h
src/simulations/: AnnoyingRacing.cpp  AnnoyingRacing.h  BigBang.cpp  BigBang.h  Cardioid.cpp  Cardioid.h  CurvedSpace.cpp  CurvedSpace.h  EarthMoon.cpp  EarthMoon.h  Fluid.cpp  Fluid.h  GLCube.cpp  GLCube.h  Mandelbrot.cpp  Mandelbrot.h  MaxPractice.cpp  MaxPractice.h  Multithreading.cpp  Multithreading.h  Particles.cpp  Particles.h  PlanetGenerator.cpp  PlanetGenerator.h  Simulation.cpp  Simulation.h  SpaceEngine.cpp  SpaceEngine.h  Superfluid.cpp  Superfluid.h  Test.cpp  Test.h  simulation_factory.h  simulation_types.h
src/ui/: attribute_item.cpp  attribute_item.h  attribute_list.cpp  attribute_list.h  imgui_custom.cpp  imgui_custom.h  imgui_options.cpp  imgui_options.h  imgui_spline.h  imgui_splines.h  imgui_widget.cpp  imgui_widget.h  options.cpp  options.h  options.ui  toolbar.cpp
src/widgets/: canvas.cpp  canvas.h  gl_engine_abstract.cpp  gl_engine_abstract.h  main_window.cpp  main_window.h
templates/: sim_header.h  sim_source.cpp
